--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
             because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
         }
     }
+    implementation ('com.github.omadahealth:lollipin:2.1.0@aar') {
+        transitive = true
+    }
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
