--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,7 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
+        maven { url "https://github.com/omadahealth/omada-nexus/raw/master/release" }
     }
 }
 rootProject.name = "mySamsungApp"
